wave 1, friendly multi-module
* tighten checkstyle based on main rep0
* 1.14 bom